--- a/KRS_ELA_Model/L227_application/Model Output Evaluations/ModelIterationReport.rmd
+++ b/KRS_ELA_Model/L227_application/Model Output Evaluations/ModelIterationReport.rmd
@@ -193,6 +193,22 @@ p6 <- ggplot(mod.match.temp, aes(x = date)) +
                       values = c("black", "red")) +
   theme(legend.position = c(0.9,0.9))
 
+p7 <- ggplot(mod.match.temp, aes(x = date)) +
+  geom_point(aes(y = obs.Temp1m, col = "1m"), pch = 19, size = 1) +
+  geom_point(aes(y = obs.Temp4m, col = "4m"), pch = 19, size = 1) +
+  geom_point(aes(y = obs.Temp9m, col = "9m"), pch = 19, size = 1) +
+  geom_line(aes(y = mod.Temp1m, col = "1m"), size = 0.5) +
+  geom_line(aes(y = mod.Temp4m, col = "4m"), size = 0.5) +
+  geom_line(aes(y = mod.Temp9m, col = "9m"), size = 0.5) +
+  ylim(0,30) +
+  ylab(expression("Temperature " ( degree*C))) +
+  xlab(" ") +
+  scale_colour_manual("", 
+                      breaks = c("1m", "4m", "9m"),
+                      values = c("#6baed6", "#3182bd", "#08519c")) +
+  theme(legend.position = c(0.9,0.9))
+#[471:610,]
+
 require(gridExtra)
 grid.arrange(p, p2, p3, ncol = 1)
 
@@ -289,6 +305,113 @@ p6 <- ggplot(totaltemp, aes(x = TempObs, y = TempMod)) +
 library(gridExtra)
 grid.arrange(p, p2, p3, ncol = 2)
 
+
+tempregression <- lm(mod.match.temp$obs.Temp1m[1:138] ~ mod.match.temp$mod.Temp1m[1:138])
+summary(tempregression)
+mse <- mean(residuals(tempregression)^2)
+rmse <- sqrt(mse)
+rmse
+
+tempregression <- lm(mod.match.temp$obs.Temp4m[1:138] ~ mod.match.temp$mod.Temp4m[1:138])
+summary(tempregression)
+mse <- mean(residuals(tempregression)^2)
+rmse <- sqrt(mse)
+rmse
+
+tempregression <- lm(mod.match.temp$obs.Temp9m[1:138] ~ mod.match.temp$mod.Temp9m[1:138])
+summary(tempregression)
+mse <- mean(residuals(tempregression)^2)
+rmse <- sqrt(mse)
+rmse
+
+tempregression <- lm(mod.match.temp$obs.Temp1m[139:340] ~ mod.match.temp$mod.Temp1m[139:340])
+summary(tempregression)
+mse <- mean(residuals(tempregression)^2)
+rmse <- sqrt(mse)
+rmse
+
+tempregression <- lm(mod.match.temp$obs.Temp4m[139:340] ~ mod.match.temp$mod.Temp4m[139:340])
+summary(tempregression)
+mse <- mean(residuals(tempregression)^2)
+rmse <- sqrt(mse)
+rmse
+
+tempregression <- lm(mod.match.temp$obs.Temp9m[139:340] ~ mod.match.temp$mod.Temp9m[139:340])
+summary(tempregression)
+mse <- mean(residuals(tempregression)^2)
+rmse <- sqrt(mse)
+rmse
+tempregression <- lm(mod.match.temp$obs.Temp1m[341:610] ~ mod.match.temp$mod.Temp1m[341:610])
+summary(tempregression)
+mse <- mean(residuals(tempregression)^2)
+rmse <- sqrt(mse)
+rmse
+
+tempregression <- lm(mod.match.temp$obs.Temp4m[341:610] ~ mod.match.temp$mod.Temp4m[341:610])
+summary(tempregression)
+mse <- mean(residuals(tempregression)^2)
+rmse <- sqrt(mse)
+rmse
+
+tempregression <- lm(mod.match.temp$obs.Temp9m[341:610] ~ mod.match.temp$mod.Temp9m[341:610])
+summary(tempregression)
+mse <- mean(residuals(tempregression)^2)
+rmse <- sqrt(mse)
+rmse
+
+chlaregression <- lm (mod.match$obs.chla[1:127] ~ mod.match$mod.chla[1:127])
+summary(chlaregression)
+mse <- mean(residuals(chlaregression)^2)
+rmse <- sqrt(mse)
+rmse
+
+chlaregression <- lm (mod.match$obs.chla[128:470] ~ mod.match$mod.chla[128:470])
+summary(chlaregression)
+mse <- mean(residuals(chlaregression)^2)
+rmse <- sqrt(mse)
+rmse
+
+chlaregression <- lm (mod.match$obs.chla[471:756] ~ mod.match$mod.chla[471:756])
+summary(chlaregression)
+mse <- mean(residuals(chlaregression)^2)
+rmse <- sqrt(mse)
+rmse
+
+TDPregression <- lm (mod.match$obs.TDP[1:127] ~ mod.match$mod.TDP[1:127])
+summary(TDPregression)
+mse <- mean(residuals(TDPregression)^2)
+rmse <- sqrt(mse)
+rmse
+
+TDPregression <- lm (mod.match$obs.TDP[128:470] ~ mod.match$mod.TDP[128:470])
+summary(TDPregression)
+mse <- mean(residuals(TDPregression)^2)
+rmse <- sqrt(mse)
+rmse
+
+TDPregression <- lm (mod.match$obs.TDP[471:756] ~ mod.match$mod.TDP[471:756])
+summary(TDPregression)
+mse <- mean(residuals(TDPregression)^2)
+rmse <- sqrt(mse)
+rmse
+
+TPregression <- lm (mod.match$obs.TP[1:127] ~ mod.match$mod.TP[1:127])
+summary(TPregression)
+mse <- mean(residuals(TDPregression)^2)
+rmse <- sqrt(mse)
+rmse
+
+TPregression <- lm (mod.match$obs.TP[128:470] ~ mod.match$mod.TP[128:470])
+summary(TPregression)
+mse <- mean(residuals(TPregression)^2)
+rmse <- sqrt(mse)
+rmse
+
+TPregression <- lm (mod.match$obs.TP[471:756] ~ mod.match$mod.TP[471:756])
+summary(TPregression)
+mse <- mean(residuals(TPregression)^2)
+rmse <- sqrt(mse)
+rmse
 ```
 
 
